--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ag-grid-react": "^29.2.0",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
